--- a/example/build.gradle
+++ b/example/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "himanshugoel.com.imagescrolling"
+        applicationId "himanshugoel.com.example"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
@@ -23,6 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
 
 }
